pretend/tests/builds-pre-1.54/receivers.stderr
error: Failed to generate pretend implementation
 --> $DIR/receivers.rs:5:1
  |
5 | #[pretend]
  | ^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: Method must take `&self` as receiver
 --> $DIR/receivers.rs:8:5
  |
8 |     async fn test_1() -> Result<()>;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Method must take `&self` as receiver
  --> $DIR/receivers.rs:10:21
   |
10 |     async fn test_2(self) -> Result<()>;
   |                     ^^^^

error: Method must take `&self` as receiver
  --> $DIR/receivers.rs:12:21
   |
12 |     async fn test_3(&mut self) -> Result<()>;
   |                     ^^^^^^^^^

error: Method must take `&self` as receiver
  --> $DIR/receivers.rs:14:5
   |
14 |     async fn test_4(input: i32) -> Result<()>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
